# cyber-news-agent

./: .env.example  .gitignore  README.md  config.py  orchestrator.py  pyproject.toml
agents/: editor.py  fetcher.py  scorer.py  summarizer.py  writer.py
articles_src/: 2026-04-28-bienvenue.md  2026-04-28-cve-sur-deux-roues-electriques-firmware-rf-et-securite-physi.md  2026-04-28-cve-sur-deux-roues-electriques-firmware-rf-et-securite-physi_social.json
bot/: main.py
data/: db.py
publisher/: blog.py
templates/: article.html.j2  feed.xml.j2
