[project]
name = "cyber-news-agent"
version = "0.1.0"
description = "Pipeline agentique de veille cyber : agregation RSS, scoring LLM, redaction d'articles pour 0xmatthieu.dev avec validation humaine via Telegram."
requires-python = ">=3.11.9"
dependencies = [
    "anthropic>=0.97.0",
    "click>=8.3.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown-it-py[plugins]>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0.3",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
